@@ -57,7 +57,6 @@ hptr_global_data_t * hptr_global_data = NULL;
 // Also note we've added a flag to the local data type (hptr_local_data_t)
 // which is 1 if the hptr scanning logic should no longer count on our 
 // "next" field to be valid.
-#if 0
 static void smr_hptr_free_list_enq(hptr_local_data_t * data)
 {
 	int i;
@@ -116,15 +115,15 @@ static void smr_hptr_free_list_enq(hptr_local_data_t * data)
 	}
 	// when we get here, we're done.
 }
-#endif
+#if 0	// simplified version to be tested
 static void smr_hptr_free_list_enq(hptr_local_data_t * data)
 {
 	hptr_local_data_t * exp;
 	
 	for (i = 0; i < smr_global_data->k; i++)
-		data->hp[i] = NULL;
-	data->flag = 1;
-	data->next = NULL;
+		atomic_set_ptr(&(data->hp[i]), NULL);	// we need this to be atomic because some-one might be reading our hazard pointers
+	atomic_set_int(&(data->flag), 1);
+	atomic_set_ptr(&(data->next), NULL);
 	
 	exp = NULL;
 	while (compare_and_exchange_ptr(&exp, &(smr_global_data->free), data) != 0)
@@ -132,6 +131,7 @@ static void smr_hptr_free_list_enq(hptr_local_data_t * data)
 		data->next = exp;
 	}
 }
+#endif
 
 // the logic here should be much simpler that that of smr_hptr_free_list_enq: we
 // simply try to obtain a node from the free list and keep trying until our CAS
