@@ -1,3 +1,7 @@
+2005-02-25	blytkerchan
+	* hptr.c (smr_hptr_free_list_enq): revive more complicated version
+	fix simplified version
+
 2005-02-24	blytkerchan
 	* hptr.c (smr_hptr_free_list_enq): simplified
 
